2002-06-26  Jeff Freedman  <jsf@usf-cf-x86-linux-1>

	* singles.h: A class to hold the common 'singletons'.

2002-06-25  Jeff Freedman  <jeff@amy.nerble.net>

	* effects.h, etc.: Cleanup:  Effects_manager class added.
	* actions.cc:  Wrote Approach_actor_action for use in
	combat to make approach of combatants work better.
	* npcnear.cc: Hostile monsters don't wait as long to get activated.
	* pathfinder/Astar.cc,etc:  Get_num_steps.

2002-06-24  Jeff Freedman  <jeff@amy.nerble.net>

	* gamewin.cc: Commented out add_nearby_npcs().  I think it's not
	needed anymore.

2002-06-24  Ryan Nunn  <triforce@merlin.net.au>
	* ChangeLog : Added comment that was meant for this branch, but I
	  accidently put in the other branch

2002-06-24  Ryan Nunn  <triforce@merlin.net.au>
	* actors.cc : Fixed a problem with gloves not using both fingers in BG.
	* actors.cc, gumps/Gump_manager.cc : Fixed a problem where using a
	  Female avatar in BG with ye olde style inventories would stop the 'I'
	  key from working
	* actors.h, gumps/Actor_gump.cc : Blue lines are now removed when two
	  handed or two fingered item equiped in BG with ye olde style
	  inventories
	* msvcstuff/Exult.dsp : Updated to remove RTTI compile option since
	  dynamic casts are no longer used.

2002-06-24  Max Horn  <max@quendi.de>
	* audio/Audio.cc: removed usage of malloc.h; removed some unused variables

2002-06-24  Jeff Freedman  <jeff@amy.nerble.net>

	* actions.h,usecode/intrinsics.cc: as_usecode_path().

2002-06-23  Ryan Nunn  <triforce@merlin.net.au>
	* msvcstuff/find_nearby.h : Removed because it's now shared for all
	* Makefile.am : Removed msvcstuff/find_nearby.h
	* objs/find_nearby.h : Added so it can be used by all
	* objs/Makefile.am : Added find_nearby.h
	* objs/*.* : Removed old Game_object::find_nearby template and now use
	  find_nearby.h and macros.

2002-06-22  Ryan Nunn  <triforce@merlin.net.au>
	* LOTS OF FILES : Added code to do caching out to memory. However, it's