@@ -1,5 +1,7 @@
 2002-06-26  Jeff Freedman  <jsf@usf-cf-x86-linux-1>
 
+	* objs/objs.h (public): Game_object::paint() no longer takes gwin
+	as a parameter. Same for paint() in Special_effects.
 	* singles.h: A class to hold the common 'singletons'.
 
 2002-06-25  Jeff Freedman  <jeff@amy.nerble.net>
